# syrup-cpi-demo

./: .gitignore  Anchor.toml  README.md  package.json
cli/: cli.ts
programs/syrup-cpi-demo/: Cargo.toml
programs/syrup-cpi-demo/src/: lib.rs
