[package]
name = "syrup-cpi-demo"
version = "0.1.0"
description = "Syrup CPI demo"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "syrup_cpi_demo"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
syrup-cpi = "0.1.0"